# OpenGL-exercises

./: CMakeLists.txt  README.md  serie5.files
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: AE.h.AB2B031405F5CF70.idx  AEDataModel.h.CEA7A2D7035C2AD8.idx  AEHelpers.h.6A692B9A19147210.idx  AEInteraction.h.D1FBA448314BAB6D.idx  AEMach.h.3BED91A8FE9B305B.idx  AEObjects.h.2D42C34FF7468926.idx  AEPackObject.h.ACA3C0E3879EBAD2.idx  AERegistry.h.A343EFAA197630A9.idx  AEUserTermTypes.h.004FB4C65133C1F9.idx  AIFF.h.6070ADC91112D7FC.idx  ASDebugging.h.7A7A0B513C60A513.idx  ASRegistry.h.9A0D04D8F1ED41D0.idx  ATS.h.AF3CDB5D623C62D9.idx  ATSAvailability.h.ED071FBD630728DC.idx  ATSDefines.h.A6733C60C5DBD32A.idx  ATSFont.h.1CED66B45DA0864A.idx  ATSLayoutTypes.h.E9B8B872CCFC57E6.idx  ATSTypes.h.942F4463B2E17697.idx  ATSUnicode.h.29568EE44A7931F4.idx  ATSUnicodeDirectAccess.h.D0985DF655B419A4.idx  ATSUnicodeFlattening.h.F081A9CCA3CFB0DF.idx  ATSUnicodeGlyphs.h.28196D4AB9AF7DB8.idx  ATSUnicodeTypes.h.9632A5D5B060334B.idx  AVLTree.h.F78227E62861A3AF.idx  AXActionConstants.h.31FA0743D1F52EE2.idx  AXAttributeConstants.h.A3E2618E9B2C7428.idx  AXConstants.h.144AA720332255EE.idx  AXError.h.7D696B5AF3B0E222.idx  AXNotificationConstants.h.37304E0ECD06FF44.idx  AXRoleConstants.h.3DE3ADD52D281CDD.idx  AXTextAttributedString.h.E8BA6C4356EBC577.idx  AXUIElement.h.35C40D57452F5E67.idx  AXValue.h.37AD9D7C2092252E.idx  AXValueConstants.h.23B131ACA42DF009.idx  Accessibility.h.B953D089175540E6.idx  Aliases.h.2EFB663917B9130B.idx  Appearance.h.3F98156F296E4356.idx  AppleEvents.h.50AFBAEEF91652BB.idx  AppleHelp.h.BF3F299FCF26842F.idx  AppleScript.h.397690C0FC84D3F6.idx  (+1244 more)
lib/glew/: CMakeLists.txt
lib/lodePNG/: CMakeLists.txt
shaders/: earth.frag  earth.vert  phong.frag  phong.vert
src/: CMakeLists.txt  bezier.cpp  bezier.hh  billboard.cpp  billboard.hh  frame.hh  gl.hh  glfw_window.cpp  glfw_window.hh  glmath.cpp  glmath.hh  main.cpp  path.hh  planet.hh  shader.cpp  shader.hh  ship.cpp  ship.hh  solar_viewer.cpp  solar_viewer.hh  sphere.cpp  sphere.hh  texture.cpp  texture.hh
